batch-mode/ai-json-template-derive/tests/trybuild/fail_unnamed_struct.stderr
error: Only support unary struct!
  --> tests/trybuild/fail_unnamed_struct.rs:17:57
   |
17 | #[derive(SaveLoad,Clone, Debug, Serialize, Deserialize, Getters, Setters, Builder)]
   |                                                         ^^^^^^^
   |
   = note: this error originates in the derive macro `Getters` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Only support unary struct!
  --> tests/trybuild/fail_unnamed_struct.rs:17:66
   |
17 | #[derive(SaveLoad,Clone, Debug, Serialize, Deserialize, Getters, Setters, Builder)]
   |                                                                  ^^^^^^^
   |
   = note: this error originates in the derive macro `Setters` (in Nightly builds, run with -Z macro-backtrace for more info)

error: Unsupported shape `unnamed fields`. Expected named fields.
  --> tests/trybuild/fail_unnamed_struct.rs:17:75
   |
17 | #[derive(SaveLoad,Clone, Debug, Serialize, Deserialize, Getters, Setters, Builder)]
   |                                                                           ^^^^^^^
   |
   = note: this error originates in the derive macro `Builder` (in Nightly builds, run with -Z macro-backtrace for more info)

error: AiJsonTemplate derive only supports a struct with named fields or an enum with all unit variants.
  --> tests/trybuild/fail_unnamed_struct.rs:19:1
   |
19 | / #[getset(get = "pub", set = "pub")]
20 | | #[builder(setter(into))]
21 | | struct FailUnnamedStruct(String, i32);
   | |______________________________________^
